# simple_calendar_drf

./: .gitignore  README.md  pyproject.toml
mega_calendar/: manage.py
mega_calendar/calendar_app/: admin.py  apps.py  converters.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
mega_calendar/calendar_app/management/commands/: create_country.py  parse_holiday.py
mega_calendar/calendar_app/migrations/: 0001_initial.py  0002_alter_event_user.py  0002_alter_user_country.py  0002_rename_city_user_country.py  0003_alter_country_country.py  0003_alter_event_country.py  0004_alter_event_end_time_alter_event_notification.py  0004_event_unique_events.py  0005_userevent_official_holiday.py  0006_alter_event_country.py  0007_alter_user_country.py  0008_alter_event_official_holiday.py  0009_remove_userevent_official_holiday.py  0010_alter_event_notification.py
mega_calendar/calendar_app/templates/calendar_app/: index.html
mega_calendar/mega_calendar/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
