[tool.poetry]
name = "simple_calendar_drf"
version = "0.1.0"
description = ""
authors = ["Andrey Smakotin <slamfromm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
djangorestframework = "^3.13.1"
celery = "^5.2.3"
djoser = "^2.1.0"
django-environ = "^0.8.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
